30-request-cert-from-cert-manager/20-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
spec:
  tls:
  - hosts:
    - hw.workshop.dev.example.com
    secretName: hello-world-tls
  rules:
  - host: hw.workshop.dev.example.com
    http:
      paths:
      - backend:
          service:
            name: hello-world
            port:
              number: 80
        pathType: Prefix
        path: /
